# uaas

./: .gitignore  README.md  astro.config.mjs
.github/workflows/: publish-python-sdk.yml
.wrangler/state/v3/images/miniflare-images-KVNamespaceObject/: metadata.sqlite-shm
.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-wal
Python/: README.md  pyproject.toml
SDK/Python/: README.md  pyproject.toml
SDK/Python/src/uaas/: __init__.py
src/components/: ApiSection.astro  Features.astro  Footer.astro  Hero.astro  Performance.astro  Pricing.astro  Roadmap.astro  Status.astro
src/pages/: index.astro
web/: package.json  wrangler.jsonc
web/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
web/.wrangler/state/v3/images/miniflare-images-KVNamespaceObject/: metadata.sqlite-wal
web/.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm
web/src/components/: ApiSection.astro  Banner.astro  Hero.astro  Performance.astro  Pricing.astro  Status.astro
web/src/layouts/: Layout.astro
web/src/pages/api/: uuid.ts
