[project]
name = "uaas"
version = "1.0.0"
description = "UaaS is a fast, highly-available, web-scale, and production-scale UUID generation service."
readme = "README.md"
authors = [
    { name = "Dong-Chen-1031", email = "dcdcdc1031@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
uaas = "uaas:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
